# veryfasttree

./: CMakeLists.txt  FastTree.c  README.md  main.cpp  treecmp.py  winbuild.py
fasttree/: Alignment.cpp  Alignment.h  Constants.h  Debug.h  DebugVars.h  DistanceMatrix.h  DistanceMatrix.tcc  FastTree.cpp  FastTree.h  FastTreeImpl.h  FastTreeImpl.tcc  HashTable.h  Knuth.cpp  Knuth.h  NeighbourJoining.h  NeighbourJoining.tcc  Options.h  TransitionMatrix.h  TransitionMatrix.tcc  Utils.h
fasttree/operations/: AVX256Operations.h  AVX256Operations.tcc  AVX2Operations.h  AVX2Operations.tcc  AVX512Operations.h  AVX512Operations.tcc  AVXOperations.h  AVXOperations.tcc  BasicOperations.cpp  BasicOperations.h  BasicOperations.tcc  SEEOperations.cpp  SEEOperations.h  SSE128Operations.h  SSE128Operations.tcc  SSE3Operations.h  SSE3Operations.tcc  SSEOperations.h  SSEOperations.tcc
libs/CLI11/: CMakeLists.txt  Validators.h
libs/CLI11/include/: CLI11.hpp
libs/boost-align/: CMakeLists.txt
libs/boost-core/: CMakeLists.txt  README.txt
libs/boost-sort/: CMakeLists.txt
libs/bxzstr/: CMakeLists.txt
libs/bxzstr/include/: bxzstr.hpp  zstd_stream_wrapper.hpp
libs/bzip2/: CMakeLists.txt
libs/mman-win32/: CMakeLists.txt
libs/mman-win32/src/sys/: mman.h
libs/robin-map/: CMakeLists.txt
libs/xxhash/: CMakeLists.txt
libs/zlib/: CMakeLists.txt
libs/zstr/: CMakeLists.txt
man/: VeryFastTree.1
src/: Alignment.cpp  Alignment.h  Constants.h  Debug.h  DiskMemory.cpp  DiskMemory.h  DistanceMatrix.h  DistanceMatrix.tcc  HashTable.h  Knuth.cpp  Knuth.h  NeighbourJoining.h  NeighbourJoining.tcc  Options.h  TransitionMatrix.h  TransitionMatrix.tcc  Utils.h  VeryFastTree.cpp  VeryFastTree.h  VeryFastTreeImpl.tcc  VeyFastTreeImpl.h
src/impl/: VeryFastTreeDouble.cpp  VeryFastTreeDoubleAVX256.cpp  VeryFastTreeDoubleAVX512.cpp  VeryFastTreeDoubleCuda.cpp  VeryFastTreeDoubleSSE128.cpp  VeryFastTreeFloat.cpp  VeryFastTreeFloatAVX256.cpp  VeryFastTreeFloatAVX512.cpp  VeryFastTreeFloatCuda.cpp  VeryFastTreeFloatSSE128.cpp
src/operations/: AVX256Operations.h  AVX256Operations.tcc  AVX512Operations.h  AVX512Operations.tcc  BasicOperations.h  BasicOperations.tcc  CudaOperations.cu  CudaOperations.h  SSE128Operations.h  SSE128Operations.tcc
tools/: README.md  prof  treecmp.py  vftplot.py  vftsum.py  winbuild.py
